# CrashRptLite

./: CMakeLists.txt  LICENSE  README.md  common.cmake
crashdumper/: AssyncNotification.h  CMakeLists.txt  CrashDumper.cpp  CrashDumper.h  CrashDumperApp.cpp  CrashDumperApp.h  CrashInfoReader.h  ScreenCap.cpp  ScreenCap.h  Utility.cpp  resource.h  stdafx.h
crashreport/: AssyncNotification.cpp  CMakeLists.txt  CrashInfoReader.cpp  CrashInfoReader.h  CrashReportApp.cpp  CrashReportApp.h  CrashReporter.cpp  CrashReporter.h  Resource.rc  ScreenCap.h  Utility.h  main.cpp  stdafx.h
demos/ConsoleDemo/: CMakeLists.txt  ConsoleDemo.cpp
demos/MFCDemo/: CMakeLists.txt  MFCDemo.cpp
libcrashrpt/: .clang-format  CMakeLists.txt  CrashHandler.cpp  CrashHandler.h  CrashRpt.cpp  CritSec.cpp  CritSec.h  SharedMem.cpp  SharedMem.h  StdAfx.cpp  StdAfx.h  Utility.cpp  Utility.h  libcrashrpt.def  resource.h  strconv.h
libcrashrpt/include/: CrashRpt.h
vcpkg_port/crashreport/: CONTROL  portfile.cmake
